[package]
name = "tonic-reconnector"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { git = "https://github.com/hyperium/tonic" }
bytes = "0.4"
prost = "0.5"
tower-service = "0.3"
tower-make = "0.3"
hyper = { git = "https://github.com/hyperium/hyper" }
tokio = { version = "0.2", features = ["macros"]}
tracing = "0.1"
pin-project = "0.4"
http = "0.2"

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic" }